src/test/ui/impl-trait/projection-mismatch-in-impl-where-clause.stderr
error[E0271]: type mismatch resolving `<() as Super>::Assoc == ()`
  --> $DIR/projection-mismatch-in-impl-where-clause.rs:13:14
   |
LL | fn test() -> impl Test {
   |              ^^^^^^^^^ expected `()`, found `u8`
   |
   = note: required because of the requirements on the impl of `Test` for `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
